# veeam-signature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_blobs.sh  reset_disk_cache.sh  reset_page_cache.sh
spdlog-1.8.2/include/spdlog/fmt/bundled/: core.h  format.h
src/: CMakeLists.txt  arguments.cpp  hasher.cpp  main.cpp  mapped_file.cpp  mapped_file.hpp  signature.cpp  signature.hpp  writer.cpp  writer.hpp
src/v1/: CMakeLists.txt  arguments.cpp  arguments.hpp  hasher.cpp  hasher.hpp  main.cpp  mapped_file.cpp  mapped_file.hpp  signature.hpp
src/v2/: CMakeLists.txt  arguments.cpp  arguments.hpp  block_file.cpp  block_file.hpp  block_reader.cpp  block_reader.hpp  hasher.cpp  hasher.hpp  main.cpp  signature.cpp  signature.hpp  writer.cpp  writer.hpp
